NetBSD Problem Report #46733

From lloyd@thallid.must-have-coffee.gen.nz  Sat Jul 21 23:35:04 2012
Return-Path: <lloyd@thallid.must-have-coffee.gen.nz>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id A3A3B63B85F
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 21 Jul 2012 23:35:03 +0000 (UTC)
Message-Id: <20120721233451.332AD349E1C@thallid.must-have-coffee.gen.nz>
Date: Sun, 22 Jul 2012 11:34:51 +1200 (NZST)
From: lloyd@must-have-coffee.gen.nz
Reply-To: lloyd@must-have-coffee.gen.nz
To: gnats-bugs@gnats.NetBSD.org
Subject: makemandb always lists links as changed pages
X-Send-Pr-Version: 3.95

>Number:         46733
>Category:       bin
>Synopsis:       makemandb always lists links as changed pages
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Jul 21 23:40:00 +0000 2012
>Closed-Date:    Sat Aug 11 21:07:42 +0000 2012
>Last-Modified:  Tue Nov 20 23:15:02 +0000 2012
>Originator:     Lloyd Parkes
>Release:        NetBSD 6.0_BETA2
>Organization:
Must Have Coffee
>Environment:
System: NetBSD thallid.must-have-coffee.gen.nz 6.0_BETA2 NetBSD 6.0_BETA2 (XEN3PAE_DOMU) #0: Mon Jun 18 04:48:20 NZST 2012 lloyd@bob:/vol/scratch/build6/obj.i386/sys/arch/i386/compile/XEN3PAE_DOMU i386
Architecture: i386
Machine: i386
>Description:

makemandb always reports the same number for "Total Number of new or
updated pages enountered" and "Total number of (hard or symbolic)
links found". 

e.g.

Updating man page index:
Building temporary file cache
Total Number of new or updated pages enountered = 446
Total number of pages that were successfully indexed/updated = 0
Total number of (hard or symbolic) links found = 446
Total number of pages that could not be indexed due to errors = 0
Deleting stale index entries

>How-To-Repeat:

Run makemandb twice in quite succession. Note that the second time
it is run, it still reports new or updated man pages even though
no new man pages have been installed.

>Fix:
I haven't looked for a fix.

>Release-Note:

>Audit-Trail:
From: Abhinav Upadhyay <er.abhinav.upadhyay@gmail.com>
To: gnats-bugs@netbsd.org
Cc: gnats-admin@netbsd.org, netbsd-bugs@netbsd.org
Subject: Re: bin/46733: makemandb always lists links as changed pages
Date: Sun, 22 Jul 2012 13:05:25 +0530

 --90e6ba21215b2d1bad04c5662cab
 Content-Type: text/plain; charset=ISO-8859-1

 On Sun, Jul 22, 2012 at 5:10 AM,  <lloyd@must-have-coffee.gen.nz> wrote:
 >>Number:         46733
 >>Category:       bin
 >>Synopsis:       makemandb always lists links as changed pages
 >>Confidential:   no
 >>Severity:       non-critical
 >>Priority:       low
 >>Responsible:    bin-bug-people
 >>State:          open
 >>Class:          sw-bug
 >>Submitter-Id:   net
 >>Arrival-Date:   Sat Jul 21 23:40:00 +0000 2012
 >>Originator:     Lloyd Parkes
 >>Release:        NetBSD 6.0_BETA2
 >>Organization:
 > Must Have Coffee
 >>Environment:
 > System: NetBSD thallid.must-have-coffee.gen.nz 6.0_BETA2 NetBSD 6.0_BETA2 (XEN3PAE_DOMU) #0: Mon Jun 18 04:48:20 NZST 2012 lloyd@bob:/vol/scratch/build6/obj.i386/sys/arch/i386/compile/XEN3PAE_DOMU i386
 > Architecture: i386
 > Machine: i386
 >>Description:
 >
 > makemandb always reports the same number for "Total Number of new or
 > updated pages enountered" and "Total number of (hard or symbolic)
 > links found".
 >
 > e.g.
 >
 > Updating man page index:
 > Building temporary file cache
 > Total Number of new or updated pages enountered = 446
 > Total number of pages that were successfully indexed/updated = 0
 > Total number of (hard or symbolic) links found = 446
 > Total number of pages that could not be indexed due to errors = 0
 > Deleting stale index entries
 >
 >>How-To-Repeat:
 >
 > Run makemandb twice in quite succession. Note that the second time
 > it is run, it still reports new or updated man pages even though
 > no new man pages have been installed.

 >>Fix:
 > I haven't looked for a fix.
 >

 Index: makemandb.c
 ===================================================================
 RCS file: /cvsroot/src/usr.sbin/makemandb/makemandb.c,v
 retrieving revision 1.10
 diff -u -p -r1.10 makemandb.c
 --- makemandb.c 8 Jul 2012 23:18:23 -0000       1.10
 +++ makemandb.c 22 Jul 2012 07:26:51 -0000
 @@ -764,12 +764,12 @@ update_db(sqlite3 *db, struct mparse *mp

         if (mflags.verbosity) {
                 printf("Total Number of new or updated pages encountered = %d\n"
 +                       "Total number of (hard or symbolic) links found = %d\n"
                         "Total number of pages that were successfully"
                         " indexed/updated = %d\n"
 -                       "Total number of (hard or symbolic) links found = %d\n"
                         "Total number of pages that could not be indexed"
                         " due to errors = %d\n",
 -                       total_count, new_count, link_count, err_count);
 +                       total_count - link_count, link_count,
 new_count, err_count);
         }

         if (mflags.recreate)

 --90e6ba21215b2d1bad04c5662cab
 Content-Type: application/octet-stream; name="makemandb.c.diff"
 Content-Disposition: attachment; filename="makemandb.c.diff"
 Content-Transfer-Encoding: base64
 X-Attachment-Id: f_h4xt4v7p0

 SW5kZXg6IG1ha2VtYW5kYi5jCj09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09
 PT09PT09PT09PT09PT09PT09PT09PT09PT09PT0KUkNTIGZpbGU6IC9jdnNyb290L3NyYy91c3Iu
 c2Jpbi9tYWtlbWFuZGIvbWFrZW1hbmRiLmMsdgpyZXRyaWV2aW5nIHJldmlzaW9uIDEuMTAKZGlm
 ZiAtdSAtcCAtcjEuMTAgbWFrZW1hbmRiLmMKLS0tIG1ha2VtYW5kYi5jIDggSnVsIDIwMTIgMjM6
 MTg6MjMgLTAwMDAgICAgICAgMS4xMAorKysgbWFrZW1hbmRiLmMgMjIgSnVsIDIwMTIgMDc6MjY6
 NTEgLTAwMDAKQEAgLTc2NCwxMiArNzY0LDEyIEBAIHVwZGF0ZV9kYihzcWxpdGUzICpkYiwgc3Ry
 dWN0IG1wYXJzZSAqbXAKICAgICAgICAKICAgICAgICBpZiAobWZsYWdzLnZlcmJvc2l0eSkgewog
 ICAgICAgICAgICAgICAgcHJpbnRmKCJUb3RhbCBOdW1iZXIgb2YgbmV3IG9yIHVwZGF0ZWQgcGFn
 ZXMgZW5jb3VudGVyZWQgPSAlZFxuIgorICAgICAgICAgICAgICAgICAgICAgICAiVG90YWwgbnVt
 YmVyIG9mIChoYXJkIG9yIHN5bWJvbGljKSBsaW5rcyBmb3VuZCA9ICVkXG4iCiAgICAgICAgICAg
 ICAgICAgICAgICAgICJUb3RhbCBudW1iZXIgb2YgcGFnZXMgdGhhdCB3ZXJlIHN1Y2Nlc3NmdWxs
 eSIKICAgICAgICAgICAgICAgICAgICAgICAgIiBpbmRleGVkL3VwZGF0ZWQgPSAlZFxuIgotICAg
 ICAgICAgICAgICAgICAgICAgICAiVG90YWwgbnVtYmVyIG9mIChoYXJkIG9yIHN5bWJvbGljKSBs
 aW5rcyBmb3VuZCA9ICVkXG4iCiAgICAgICAgICAgICAgICAgICAgICAgICJUb3RhbCBudW1iZXIg
 b2YgcGFnZXMgdGhhdCBjb3VsZCBub3QgYmUgaW5kZXhlZCIKICAgICAgICAgICAgICAgICAgICAg
 ICAgIiBkdWUgdG8gZXJyb3JzID0gJWRcbiIsCi0gICAgICAgICAgICAgICAgICAgICAgIHRvdGFs
 X2NvdW50LCBuZXdfY291bnQsIGxpbmtfY291bnQsIGVycl9jb3VudCk7CisgICAgICAgICAgICAg
 ICAgICAgICAgIHRvdGFsX2NvdW50IC0gbGlua19jb3VudCwgbGlua19jb3VudCwgbmV3X2NvdW50
 LCBlcnJfY291bnQpOwogICAgICAgIH0KIAogICAgICAgIGlmIChtZmxhZ3MucmVjcmVhdGUpCg==
 --90e6ba21215b2d1bad04c5662cab--

From: Abhinav Upadhyay <er.abhinav.upadhyay@gmail.com>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: bin/46733: makemandb always lists links as changed pages
Date: Thu, 9 Aug 2012 11:37:30 +0530

 On Sun, Jul 22, 2012 at 1:05 PM, Abhinav Upadhyay
 <er.abhinav.upadhyay@gmail.com> wrote:
 >
 > On Sun, Jul 22, 2012 at 5:10 AM,  <lloyd@must-have-coffee.gen.nz> wrote:
 > >>Number:         46733
 > >>Category:       bin
 > >>Synopsis:       makemandb always lists links as changed pages
 > >>Confidential:   no
 > >>Severity:       non-critical
 > >>Priority:       low
 > >>Responsible:    bin-bug-people
 > >>State:          open
 > >>Class:          sw-bug
 > >>Submitter-Id:   net
 > >>Arrival-Date:   Sat Jul 21 23:40:00 +0000 2012
 > >>Originator:     Lloyd Parkes
 > >>Release:        NetBSD 6.0_BETA2
 > >>Organization:
 > > Must Have Coffee
 > >>Environment:
 > > System: NetBSD thallid.must-have-coffee.gen.nz 6.0_BETA2 NetBSD
 > > 6.0_BETA2 (XEN3PAE_DOMU) #0: Mon Jun 18 04:48:20 NZST 2012
 > > lloyd@bob:/vol/scratch/build6/obj.i386/sys/arch/i386/compile/XEN3PAE_DOMU
 > > i386
 > > Architecture: i386
 > > Machine: i386
 > >>Description:
 > >
 > > makemandb always reports the same number for "Total Number of new or
 > > updated pages enountered" and "Total number of (hard or symbolic)
 > > links found".
 > >
 > > e.g.
 > >
 > > Updating man page index:
 > > Building temporary file cache
 > > Total Number of new or updated pages enountered = 446
 > > Total number of pages that were successfully indexed/updated = 0
 > > Total number of (hard or symbolic) links found = 446
 > > Total number of pages that could not be indexed due to errors = 0
 > > Deleting stale index entries
 > >
 > >>How-To-Repeat:
 > >
 > > Run makemandb twice in quite succession. Note that the second time
 > > it is run, it still reports new or updated man pages even though
 > > no new man pages have been installed.
 >
 > >>Fix:
 > > I haven't looked for a fix.
 > >
 >
 > Index: makemandb.c
 > ===================================================================
 > RCS file: /cvsroot/src/usr.sbin/makemandb/makemandb.c,v
 > retrieving revision 1.10
 > diff -u -p -r1.10 makemandb.c
 > --- makemandb.c 8 Jul 2012 23:18:23 -0000       1.10
 > +++ makemandb.c 22 Jul 2012 07:26:51 -0000
 > @@ -764,12 +764,12 @@ update_db(sqlite3 *db, struct mparse *mp
 >
 >         if (mflags.verbosity) {
 >                 printf("Total Number of new or updated pages encountered =
 > %d\n"
 > +                       "Total number of (hard or symbolic) links found =
 > %d\n"
 >                         "Total number of pages that were successfully"
 >                         " indexed/updated = %d\n"
 > -                       "Total number of (hard or symbolic) links found =
 > %d\n"
 >                         "Total number of pages that could not be indexed"
 >                         " due to errors = %d\n",
 > -                       total_count, new_count, link_count, err_count);
 > +                       total_count - link_count, link_count,
 > new_count, err_count);
 >         }
 >
 >         if (mflags.recreate)

 Would someone please review and commit this or if it is not required
 then close this PR :)


 --
 Abhinav

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Sat, 11 Aug 2012 21:07:42 +0000
State-Changed-Why:
Committed, thanks.


From: "Thomas Klausner" <wiz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46733 CVS commit: src/usr.sbin/makemandb
Date: Sat, 11 Aug 2012 21:07:14 +0000

 Module Name:	src
 Committed By:	wiz
 Date:		Sat Aug 11 21:07:13 UTC 2012

 Modified Files:
 	src/usr.sbin/makemandb: makemandb.c

 Log Message:
 Bug fix for PR 46733:
  > makemandb always reports the same number for "Total Number of new or
  > updated pages enountered" and "Total number of (hard or symbolic)
  > links found".

 Patch from Abhinav Upadhyay.


 To generate a diff of this commit:
 cvs rdiff -u -r1.10 -r1.11 src/usr.sbin/makemandb/makemandb.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46733 CVS commit: [netbsd-6] src
Date: Tue, 20 Nov 2012 23:11:48 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Tue Nov 20 23:11:47 UTC 2012

 Modified Files:
 	src/etc [netbsd-6]: daily weekly
 	src/etc/rc.d [netbsd-6]: makemandb
 	src/usr.sbin/makemandb [netbsd-6]: apropos.1 apropos.c makemandb.8
 	    makemandb.c

 Log Message:
 Pull up following revision(s) (requested by tron in ticket #676):
 	usr.sbin/makemandb/apropos.c: revision 1.7
 	usr.sbin/makemandb/makemandb.8: revision 1.3
 	usr.sbin/makemandb/makemandb.8: revision 1.4
 	usr.sbin/makemandb/makemandb.8: revision 1.5
 	etc/rc.d/makemandb: revision 1.4
 	etc/weekly: revision 1.29
 	usr.sbin/makemandb/makemandb.c: revision 1.10
 	usr.sbin/makemandb/makemandb.c: revision 1.11
 	usr.sbin/makemandb/makemandb.c: revision 1.12
 	usr.sbin/makemandb/makemandb.c: revision 1.13
 	usr.sbin/makemandb/makemandb.c: revision 1.14
 	usr.sbin/makemandb/apropos.1: revision 1.5
 	etc/daily: revision 1.87
 Add HISTORY section. From Abhinav Upadhyay in private mail.
 Sync with reality, From Abhinav Upadhyay in private mail.
 Fix typo in a message.
 Bug fix for PR 46733:
  > makemandb always reports the same number for "Total Number of new or
  > updated pages enountered" and "Total number of (hard or symbolic)
  > links found".
 Patch from Abhinav Upadhyay.
 Sort options in SYNOPSIS.
 Sync usage with manpage.
 Add -Q flag:
 Print only fatal error messages (i.e., when the database is left in
 an inconsistent state and needs manual intervention).
 From Abhinav Upadhyay <er.abhinav.upadhyay@gmail.com>.
 Use new makemandb -Q flag to be really quiet.
 Fix usage, from Abhinav Upadhyay <er.abhinav.upadhyay@gmail.com>.
 Use emalloc in one more place, like the rest of the code does.
 From Abhinav Upadhyay <er.abhinav.upadhyay@gmail.com>.


 To generate a diff of this commit:
 cvs rdiff -u -r1.80.2.5 -r1.80.2.6 src/etc/daily
 cvs rdiff -u -r1.25.2.3 -r1.25.2.4 src/etc/weekly
 cvs rdiff -u -r1.1.2.1 -r1.1.2.2 src/etc/rc.d/makemandb
 cvs rdiff -u -r1.2.2.2 -r1.2.2.3 src/usr.sbin/makemandb/apropos.1
 cvs rdiff -u -r1.4.2.2 -r1.4.2.3 src/usr.sbin/makemandb/apropos.c
 cvs rdiff -u -r1.1.2.1 -r1.1.2.2 src/usr.sbin/makemandb/makemandb.8
 cvs rdiff -u -r1.2.2.5 -r1.2.2.6 src/usr.sbin/makemandb/makemandb.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.