Bug fix for PR 46733:  > makemandb always reports the same number for "Total Number of new or  > updated pages enountered" and "Total number of (hard or symbolic)  > links found".

Patch from Abhinav Upadhyay.